# fat12

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.ino  test.txt  todo.txt
src/: boot.h  console.c  console.h  error.h  fat12.c  interface.c  interface.h  main.c
src/lib/: entry.h  error.h  fat12.h  interface.h
